TSK-1089 fix NullpointerException in parseListenerEnginePlugin, consolidate properties and properties files

--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/taskana-outbox.properties
@@ -1,17 +1,17 @@
 taskana.outbox.schema = taskana_tables
 
-#taskana.adapter.outbox.rest.datasource.driver=org.postgresql.Driver
-#taskana.adapter.outbox.rest.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#taskana.adapter.outbox.rest.datasource.username=postgres
-#taskana.adapter.outbox.rest.datasource.password=postgres
+#taskana.adapter.outbox.datasource.driver=org.postgresql.Driver
+#taskana.adapter.outbox.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#taskana.adapter.outbox.datasource.username=postgres
+#taskana.adapter.outbox.datasource.password=postgres
 
-taskana.adapter.outbox.rest.datasource.driver = org.h2.Driver
-taskana.adapter.outbox.rest.datasource.url=jdbc:h2:mem:camunda;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-taskana.adapter.outbox.rest.datasource.username=sa
-taskana.adapter.outbox.rest.datasource.password=sa
+taskana.adapter.outbox.datasource.driver = org.h2.Driver
+taskana.adapter.outbox.datasource.url=jdbc:h2:mem:camunda;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+taskana.adapter.outbox.datasource.username=sa
+taskana.adapter.outbox.datasource.password=sa
 
 
-#taskana.adapter.outbox.rest.datasource.driver=oracle.jdbc.driver.OracleDriver
-#taskana.adapter.outbox.rest.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-#taskana.adapter.outbox.rest.datasource.username=camunda
-#taskana.adapter.outbox.rest.datasource.password=pwd4Camunda
+#taskana.adapter.outbox.datasource.driver=oracle.jdbc.driver.OracleDriver
+#taskana.adapter.outbox.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#taskana.adapter.outbox.datasource.username=camunda
+#taskana.adapter.outbox.datasource.password=pwd4Camunda
