--- a/taskana-adapter-camunda-wildfly-example/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-wildfly-example/src/main/resources/application.properties
@@ -41,15 +41,48 @@ taskana.datasource.jndi-name=java:/TaskanaDS
 
 ####### cache static resources properties
 spring.resources.cache.cachecontrol.cache-private=true
+spring.main.allow-bean-definition-overriding=true
 
 taskana.schemaName=TASKANA
 
-taskana.adapter.mapping.default.domain=DOMAIN_A
-taskana.adapter.mapping.default.classification.key=L1050
-taskana.adapter.mapping.default.classification.type=TASK
 taskana.adapter.mapping.default.objectreference.company=DEFAULT_COMPANY
 taskana.adapter.mapping.default.objectreference.system=DEFAULT_SYSTEM
 taskana.adapter.mapping.default.objectreference.system.instance=DEFAULT_SYSTEM_INSTANCE
 taskana.adapter.mapping.default.objectreference.type=DEFAULT_TYPE
 taskana.adapter.mapping.default.objectreference.value=DEFAULT_VALUE
 
+####### control LDAP usage
+taskana.ldap.useLdap=false
+####### properties to connect to LDAP
+taskana.ldap.serverUrl=ldap://localhost:10389
+taskana.ldap.bindDn=uid=admin,ou=system
+taskana.ldap.bindPassword=secret
+taskana.ldap.baseDn=o=TaskanaTest
+####### properties that control search for users and groups
+taskana.ldap.userSearchBase=ou=people
+taskana.ldap.userSearchFilterName=objectclass
+taskana.ldap.userSearchFilterValue=person
+taskana.ldap.userFirstnameAttribute=givenName
+taskana.ldap.userLastnameAttribute=sn
+taskana.ldap.userIdAttribute=uid
+taskana.ldap.groupSearchBase=ou=groups
+taskana.ldap.groupSearchFilterName=objectclass
+taskana.ldap.groupSearchFilterValue=groupOfUniqueNames
+taskana.ldap.groupNameAttribute=cn
+taskana.ldap.minSearchForLength=3
+taskana.ldap.maxNumberOfReturnedAccessIds=50
+taskana.ldap.groupsOfUser=memberUid
+####### JobScheduler cron expression that specifies when the JobSchedler runs
+taskana.jobscheduler.async.cron=0 * * * * *
+####### cache static resources properties
+spring.resources.cache.cachecontrol.cache-private=true
+####### for upload of big workbasket- or classification-files
+spring.main.allow-bean-definition-overriding=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+server.tomcat.max-http-post-size=-1
+server.tomcat.max-save-post-size=-1
+server.tomcat.max-swallow-size=-1
+####### tomcat is not detecting the x-forward headers from bluemix as a trustworthy proxy
+server.tomcat.internal-proxies=.*
+server.use-forward-headers=true
