TSK-1089 comments from jhe

--- a/taskana-adapter-camunda-listener/pom.xml
+++ b/taskana-adapter-camunda-listener/pom.xml
@@ -27,7 +27,7 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>3.5.4</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
           </dependency>
         </dependencies>
 
