TSK-1124 delete task loops in adapter

--- a/taskana-adapter-camunda-outbox-rest/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-outbox-rest/src/main/resources/taskana-outbox.properties
@@ -1,4 +1,4 @@
-taskana.outbox.schema = taskana_tables
+taskana.adapter.outbox.schema = taskana_tables
 
 taskana.adapter.outbox.datasource.jndi=java:jboss/datasources/ProcessEnginePostgres
 #taskana.adapter.outbox.datasource.jndi=jdbc/ProcessEngine
