--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/taskana-outbox.properties
@@ -1,4 +1,4 @@
-taskana.outbox.schema = taskana_tables
+taskana.adapter.outbox.schema = taskana_tables
 
 #taskana.adapter.outbox.datasource.driver=org.postgresql.Driver
 #taskana.adapter.outbox.datasource.url=jdbc:postgresql://localhost:5432/postgres
