--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
                 <version.wildfly.maven.plugin>2.0.2.Final</version.wildfly.maven.plugin>
                 <version.jboss-as-maven-plugin>7.9.Final</version.jboss-as-maven-plugin>
 
+                <version.assertj>3.15.0</version.assertj>
                 <version.junit>4.13</version.junit>
                 <version.hamcrest.json>0.2</version.hamcrest.json>
 
