--- a/taskana-adapter-camunda-spring-boot-test/pom.xml
+++ b/taskana-adapter-camunda-spring-boot-test/pom.xml
@@ -134,6 +134,13 @@
                         <artifactId>resteasy-spring-boot-starter</artifactId>
                         <version>${version.resteasy.spring.boot}</version>
                 </dependency>
+
+                <dependency>
+                        <groupId>org.assertj</groupId>
+                        <artifactId>assertj-core</artifactId>
+                        <version>${version.assertj}</version>
+                        <scope>test</scope>
+                </dependency>
         </dependencies>
 
         <build>
