--- a/taskana-adapter-camunda-spring-boot-sample/pom.xml
+++ b/taskana-adapter-camunda-spring-boot-sample/pom.xml
@@ -64,6 +64,12 @@
                         <artifactId>postgresql</artifactId>
                         <version>${version.postgres}</version>
                 </dependency>
+                <dependency>
+                        <groupId>com.h2database</groupId>
+                        <artifactId>h2</artifactId>
+                        <version>${version.h2database}</version>
+                        <scope>compile</scope>
+                </dependency>
         </dependencies>
 
         <build>
