--- a/taskana-adapter-camunda-spring-boot-sample/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-sample/src/main/resources/application.properties
@@ -13,9 +13,13 @@ logging.level.pro.taskana=DEBUG
 ## Set Server Port for Adapter
 server.port = 8081
 
+spring.main.allow-bean-definition-overriding=true
+
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=10000
-taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.milliseconds=10000
+taskana.adapter.scheduler.run.interval.for.claimed.referenced.tasks.in.milliseconds=10000
+taskana.adapter.scheduler.run.interval.for.cancelled.claim.referenced.tasks.in.milliseconds=10000
+taskana.adapter.scheduler.run.interval.for.check.finished.referenced.tasks.in.milliseconds=10000
 
 ####################################################################################
 # System connector properties
@@ -32,21 +36,21 @@ taskana-system-connector-camundaSystemURLs=http://localhost:8080/engine-rest | h
 #
 # Configue the dataource for Taskana DB (used by taskana-connector
 # taskana.datasource.jdbcUrl = jdbc:h2:tcp://localhost:8092/mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
-# taskana.datasource.jdbcUrl=jdbc:h2:mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
-# taskana.datasource.driverClassName = org.h2.Driver
-# taskana.datasource.username = sa
-# taskana.datasource.password = sa
+taskana.datasource.jdbcUrl=jdbc:h2:mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;DB_CLOSE_ON_EXIT=FALSE
+taskana.datasource.driverClassName = org.h2.Driver
+taskana.datasource.username = sa
+taskana.datasource.password = sa
 #
 # taskana.datasource.jdbcUrl=jdbc:db2://localhost:50050/taskana
 # taskana.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
 # taskana.datasource.username=db2user
 # taskana.datasource.password=Db2password
 
-taskana.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/postgres
-taskana.datasource.driverClassName=org.postgresql.Driver
-taskana.datasource.username=postgres
-taskana.datasource.password=postgres
-taskana.schemaName=TASKANA
+#taskana.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/postgres
+#taskana.datasource.driverClassName=org.postgresql.Driver
+#taskana.datasource.username=postgres
+#taskana.datasource.password=postgres
+#taskana.schemaName=TASKANA
 
 taskana.adapter.mapping.default.objectreference.company=DEFAULT_COMPANY
 taskana.adapter.mapping.default.objectreference.system=DEFAULT_SYSTEM
