--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
@@ -23,7 +23,8 @@ logging.level.pro.taskana=INFO
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=1000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=1000
 taskana.adapter.scheduler.run.interval.for.claimed.referenced.tasks.in.milliseconds=1000
-taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.milliseconds=1000
+taskana.adapter.scheduler.run.interval.for.cancelled.claim.referenced.tasks.in.milliseconds=1000
+taskana.adapter.scheduler.run.interval.for.check.finished.referenced.tasks.in.milliseconds=1000
 
 ####################################################################################
 # System connector properties
