--- a/taskana-adapter-camunda-listener/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-listener/src/main/resources/taskana-outbox.properties
@@ -1,5 +1,7 @@
 taskana.adapter.outbox.schema = taskana_tables
 
+taskana.adapter.create_outbox_schema = true
+
 taskana.adapter.outbox.rest.datasource.jndi=java:jboss/datasources/ProcessEnginePostgres
 #taskana.adapter.outbox.rest.datasource.jndi=jdbc/ProcessEngine
 
