--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
         <modelVersion>4.0.0</modelVersion>
         <groupId>pro.taskana</groupId>
         <artifactId>taskana-adapter-parent</artifactId>
@@ -62,7 +62,7 @@
 
                 <version.maven.gpg>1.6</version.maven.gpg>
                 <version.sonatype>1.6.8</version.sonatype>
-
+                <version.jacoco>0.8.5</version.jacoco>
         </properties>
 
         <developers>
@@ -100,14 +100,14 @@
                 <module>taskana-adapter-camunda-spring-boot-test</module>
         </modules>
 
-                <repositories>
-                        <repository>
-                                <id>snapshots-repo</id>
-                                <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-                                <releases><enabled>false</enabled></releases>
-                                <snapshots><enabled>true</enabled></snapshots>
-                        </repository>
-                </repositories>
+        <repositories>
+                <repository>
+                        <id>snapshots-repo</id>
+                        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                        <releases><enabled>false</enabled></releases>
+                        <snapshots><enabled>true</enabled></snapshots>
+                </repository>
+        </repositories>
 
         <profiles>
                 <profile>
@@ -217,6 +217,26 @@
                                                 </plugin>
                                         </plugins>
                                 </pluginManagement>
+                        </build>
+                </profile>
+                <profile>
+                        <id>coverage</id>
+                        <build>
+                                <plugins>
+                                        <plugin>
+                                                <groupId>org.jacoco</groupId>
+                                                <artifactId>jacoco-maven-plugin</artifactId>
+                                                <version>${version.jacoco}</version>
+                                                <executions>
+                                                        <execution>
+                                                                <goals>
+                                                                        <goal>prepare-agent</goal>
+                                                                        <goal>report</goal>
+                                                                </goals>
+                                                        </execution>
+                                                </executions>
+                                        </plugin>
+                                </plugins>
                         </build>
                 </profile>
         </profiles>
