--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,8 @@
                 <version.maven.gpg>1.6</version.maven.gpg>
                 <version.sonatype>1.6.8</version.sonatype>
                 <version.jacoco>0.8.5</version.jacoco>
+                <!-- used by jacoco to collect coverage -->
+                <argLine></argLine>
         </properties>
 
         <developers>
@@ -305,6 +307,9 @@
                                 <groupId>org.apache.maven.plugins</groupId>
                                 <artifactId>maven-surefire-plugin</artifactId>
                                 <version>${version.maven.surefire.plugin}</version>
+                                <configuration>
+                                        <argLine>${argLine}</argLine>
+                                </configuration>
                         </plugin>
                         <plugin>
                                 <groupId>org.apache.maven.plugins</groupId>
