ADPT-79 Change property names in taskana-outbox.properties for TaskanaTaskListener module

--- a/taskana-adapter-camunda-listener/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-listener/src/main/resources/taskana-outbox.properties
@@ -2,10 +2,10 @@ taskana.adapter.outbox.schema = taskana_tables
 
 taskana.adapter.create_outbox_schema = true
 
-taskana.adapter.outbox.rest.datasource.jndi=java:jboss/datasources/ProcessEnginePostgres
-#taskana.adapter.outbox.rest.datasource.jndi=jdbc/ProcessEngine
+taskana.adapter.outbox.datasource.jndi=java:jboss/datasources/ProcessEnginePostgres
+#taskana.adapter.outbox.datasource.jndi=jdbc/ProcessEngine
 
-#taskana.adapter.outbox.rest.datasource.driver=org.postgresql.Driver
-#taskana.adapter.outbox.rest.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#taskana.adapter.outbox.rest.datasource.username=postgres
-#taskana.adapter.outbox.rest.datasource.password=postgres
+#taskana.adapter.outbox.datasource.driver=org.postgresql.Driver
+#taskana.adapter.outbox.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#taskana.adapter.outbox.datasource.username=postgres
+#taskana.adapter.outbox.datasource.password=postgres
