--- a/taskana-adapter/pom.xml
+++ b/taskana-adapter/pom.xml
@@ -14,6 +14,10 @@
         <packaging>jar</packaging>
         <name>${project.groupId}:${project.artifactId}</name>
         <description>Taskana Adapter for executing tasks from external systems</description>
+        
+        <properties>
+        <sonar.jacoco.reportPaths>../taskana-adapter-camunda-spring-boot-test/target/jacoco.exec</sonar.jacoco.reportPaths>
+    </properties>
 
         <dependencies>
                 <dependency>
