--- a/pom.xml
+++ b/pom.xml
@@ -230,11 +230,16 @@
                                                 <artifactId>jacoco-maven-plugin</artifactId>
                                                 <version>${version.jacoco}</version>
                                                 <executions>
-                                                        <execution>
-                                                                <goals>
-                                                                        <goal>prepare-agent</goal>
-                                                                        <goal>report</goal>
-                                                                </goals>
+          <execution>
+            <id>report-aggregate</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>report-aggregate</goal>
+            </goals><!--                                                         <execution> -->
+<!--                                                                 <goals> -->
+<!--                                                                         <goal>prepare-agent</goal> -->
+<!--                                                                         <goal>report</goal> -->
+<!--                                                                 </goals> -->
                                                         </execution>
                                                 </executions>
                                         </plugin>
