use report-aggregate goal only in projects with tests

--- a/pom.xml
+++ b/pom.xml
@@ -230,16 +230,11 @@
                                                 <artifactId>jacoco-maven-plugin</artifactId>
                                                 <version>${version.jacoco}</version>
                                                 <executions>
-          <execution>
-            <id>report-aggregate</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>report-aggregate</goal>
-            </goals><!--                                                         <execution> -->
-<!--                                                                 <goals> -->
-<!--                                                                         <goal>prepare-agent</goal> -->
+                                                	<execution>
+                                                                <goals>
+                                                                        <goal>prepare-agent</goal>
 <!--                                                                         <goal>report</goal> -->
-<!--                                                                 </goals> -->
+                                                                </goals>
                                                         </execution>
                                                 </executions>
                                         </plugin>
