--- a/taskana-adapter-camunda-system-connector/pom.xml
+++ b/taskana-adapter-camunda-system-connector/pom.xml
@@ -67,4 +67,29 @@
                 </plugins>
         </build>
 
+
+		<profiles>
+			<profile>
+				<id>coverage</id>
+				<build>
+					<plugins>
+						<plugin>
+							<groupId>org.jacoco</groupId>
+							<artifactId>jacoco-maven-plugin</artifactId>
+							<version>${version.jacoco}</version>
+							<executions>
+								<execution>
+									<id>report-aggregate</id>
+									<phase>verify</phase>
+									<goals>
+										<goal>report-aggregate</goal>
+									</goals>
+								</execution>
+							</executions>
+						</plugin>
+					</plugins>
+				</build>
+			</profile>
+		</profiles>
+
 </project>
