--- a/taskana-adapter-camunda-wildfly-example/pom.xml
+++ b/taskana-adapter-camunda-wildfly-example/pom.xml
@@ -14,6 +14,7 @@
 
         <properties>
                 <failOnMissingWebXml>false</failOnMissingWebXml>
+				<sonar.skip>true</sonar.skip>
         </properties>
 
         <dependencyManagement>
