--- a/taskana-adapter-camunda-listener/pom.xml
+++ b/taskana-adapter-camunda-listener/pom.xml
@@ -29,6 +29,19 @@
             <version>3.5.4</version>
             <scope>provided</scope>
           </dependency>
+          <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${version.assertj}</version>
+            <scope>test</scope>
+          </dependency>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${version.junit.jupiter}</version>
+            <scope>test</scope>
+          </dependency>
+
         </dependencies>
 
 </project>
