--- a/taskana-adapter-camunda-spring-boot-sample/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-sample/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.main.allow-bean-definition-overriding=true
 
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=10000
-taskana.adapter.scheduler.run.interval.for.claimed.referenced.tasks.in.milliseconds=10000
-taskana.adapter.scheduler.run.interval.for.cancelled.claim.referenced.tasks.in.milliseconds=10000
+taskana.adapter.scheduler.run.interval.for.claim.referenced.tasks.in.milliseconds=10000
+taskana.adapter.scheduler.run.interval.for.cancel.claim.referenced.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.check.finished.referenced.tasks.in.milliseconds=10000
 
 ####################################################################################
