--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
@@ -22,8 +22,8 @@ logging.level.pro.taskana=INFO
 
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=1000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=1000
-taskana.adapter.scheduler.run.interval.for.claimed.referenced.tasks.in.milliseconds=1000
-taskana.adapter.scheduler.run.interval.for.cancelled.claim.referenced.tasks.in.milliseconds=1000
+taskana.adapter.scheduler.run.interval.for.claim.referenced.tasks.in.milliseconds=1000
+taskana.adapter.scheduler.run.interval.for.cancel.claim.referenced.tasks.in.milliseconds=1000
 taskana.adapter.scheduler.run.interval.for.check.finished.referenced.tasks.in.milliseconds=1000
 
 ####################################################################################
@@ -34,6 +34,11 @@ taskana.adapter.scheduler.run.interval.for.check.finished.referenced.tasks.in.mi
 # <camundaSystem1-RestURL> | <camundaSystem1-TaskEventsURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-TaskEventsURL>
 
 taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/taskana-outbox/rest/engine/default | http://localhost:${server.port}
+
+taskana-system-connector-camunda-rest-api-user-name=demo
+taskana-system-connector-camunda-rest-api-user-password=demo
+taskana-system-connector-outbox-rest-api-user-name=outboxRestUser
+taskana-system-connector-outbox-rest-api-user-password=pwd4OutboxRestUser
 ####################################################################################
 # Taskana-connector properties
 ####################################################################################
@@ -57,9 +62,6 @@ taskana.datasource.password = sa
 
 taskana.schemaName=TASKANA
 
-taskana.adapter.mapping.default.domain=DOMAIN_A
-taskana.adapter.mapping.default.classification.key=L1050
-taskana.adapter.mapping.default.classification.type=TASK
 taskana.adapter.mapping.default.objectreference.company=DEFAULT_COMPANY
 taskana.adapter.mapping.default.objectreference.system=DEFAULT_SYSTEM
 taskana.adapter.mapping.default.objectreference.system.instance=DEFAULT_SYSTEM_INSTANCE
