--- a/taskana-adapter-camunda-wildfly-example/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-wildfly-example/src/main/resources/application.properties
@@ -9,48 +9,36 @@ spring.profiles.active=@activatedProperties@
 # logging.level.com.spring.ibatis.*=DEBUG
 # logging.level.org.apache.ibatis=DEBUG
 logging.level.pro.taskana=INFO
-
 ######################################################################################
 ## Adapter properties
 ######################################################################################
-
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=10000
-taskana.adapter.scheduler.run.interval.for.claimed.referenced.tasks.in.milliseconds=10000
-taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.milliseconds=10000
-
+taskana.adapter.scheduler.run.interval.for.claim.referenced.tasks.in.milliseconds=10000
+taskana.adapter.scheduler.run.interval.for.check.finished.referenced.tasks.in.milliseconds=10000
 ####################################################################################
 # System connector properties
 ######################################################################################
-
 # Set URLs of Camunda REST API and associated Camunda task events. The format is
 # <camundaSystem1-RestURL> | <camundaSystem1-TaskEventsURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-TaskEventsURL>
-
-taskana-system-connector-camundaSystemURLs=http://localhost:8080/engine-rest | http://localhost:8080
+taskana-system-connector-camundaSystemURLs=http://localhost:7001/engine-rest | http://localhost:7001
+taskana-system-connector-camunda-rest-api-user-name=demo
+taskana-system-connector-camunda-rest-api-user-password=pwd4Demo
+taskana-system-connector-outbox-rest-api-user-name=outboxRestUser
+taskana-system-connector-outbox-rest-api-user-password=pwd4OutboxRestUser
 ####################################################################################
 # taskana-connector propertiew
 ######################################################################################
-
-taskana.jobs.maxRetries=3
-taskana.jobs.batchSize=50
-taskana.jobs.cleanup.runEvery=P1D
-taskana.jobs.cleanup.firstRunAt=2018-07-25T08:00:00Z
-taskana.jobs.cleanup.minimumAge=P14D
-
 taskana.datasource.jndi-name=java:/TaskanaDS
-
 ####### cache static resources properties
 spring.resources.cache.cachecontrol.cache-private=true
 spring.main.allow-bean-definition-overriding=true
-
 taskana.schemaName=TASKANA
-
 taskana.adapter.mapping.default.objectreference.company=DEFAULT_COMPANY
 taskana.adapter.mapping.default.objectreference.system=DEFAULT_SYSTEM
 taskana.adapter.mapping.default.objectreference.system.instance=DEFAULT_SYSTEM_INSTANCE
 taskana.adapter.mapping.default.objectreference.type=DEFAULT_TYPE
 taskana.adapter.mapping.default.objectreference.value=DEFAULT_VALUE
-
 ####### control LDAP usage
 taskana.ldap.useLdap=false
 ####### properties to connect to LDAP
@@ -72,8 +60,6 @@ taskana.ldap.groupNameAttribute=cn
 taskana.ldap.minSearchForLength=3
 taskana.ldap.maxNumberOfReturnedAccessIds=50
 taskana.ldap.groupsOfUser=memberUid
-####### JobScheduler cron expression that specifies when the JobSchedler runs
-taskana.jobscheduler.async.cron=0 * * * * *
 ####### cache static resources properties
 spring.resources.cache.cachecontrol.cache-private=true
 ####### for upload of big workbasket- or classification-files
