TSK-1175 limit number of events returned by outbox Rest Api

--- a/taskana-adapter-camunda-listener/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-listener/src/main/resources/taskana-outbox.properties
@@ -1,5 +1,5 @@
 taskana.adapter.outbox.schema = taskana_tables
-
+taskana.adapter.outbox.max.number.of.events = 57
 taskana.adapter.create_outbox_schema = true
 
 taskana.adapter.outbox.datasource.jndi=java:jboss/datasources/ProcessEnginePostgres
