--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/taskana-outbox.properties
@@ -1,6 +1,7 @@
 taskana.adapter.outbox.schema = taskana_tables
-
+taskana.adapter.outbox.max.number.of.events = 57
 taskana.adapter.create_outbox_schema = true
+
 
 #taskana.adapter.outbox.datasource.driver=org.postgresql.Driver
 #taskana.adapter.outbox.datasource.url=jdbc:postgresql://localhost:5432/postgres
