--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,14 @@
                 <version.spring.core>2.0.0.RELEASE</version.spring.core>
                 <version.spring.boot>2.2.7.RELEASE</version.spring.boot>
 
-                <version.camunda>7.10.0</version.camunda>
-                <version.camunda.bpm.spring.boot>3.2.0</version.camunda.bpm.spring.boot>
+                <version.camunda>7.11.0</version.camunda>
+                <version.camunda.bpm.spring.boot>3.3.0</version.camunda.bpm.spring.boot>
+                <version.camunda.bpm.spring.boot.webapps>3.2.0</version.camunda.bpm.spring.boot.webapps>
+                <version.camunda.bpm.spring.boot.test>3.2.0</version.camunda.bpm.spring.boot.test>
                 <version.camunda.bpm.extensions>1.2</version.camunda.bpm.extensions>
-                <version.camunda.spin.engine.plugin>7.10.0</version.camunda.spin.engine.plugin>
-                <version.camunda.spin.dataformat.json.jackson>1.8.0</version.camunda.spin.dataformat.json.jackson>
-                <version.camunda.spin>1.8.0</version.camunda.spin>
+                <version.camunda.spin.engine.plugin>7.11.0</version.camunda.spin.engine.plugin>
+                <version.camunda.spin.dataformat.json.jackson>1.9.0</version.camunda.spin.dataformat.json.jackson>
+                <version.camunda.spin>1.9.0</version.camunda.spin>
                 <version.resteasy.spring.boot>4.5.1.Final</version.resteasy.spring.boot>
                 <version.resteasy.jaxrs>3.0.12.Final</version.resteasy.jaxrs>
                 <version.javax.servlet.api>4.0.1</version.javax.servlet.api>
