ADPT-99: Run adapter scheduled task with JAAS subject

--- a/taskana-adapter-camunda-spring-boot-sample/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-sample/src/main/resources/application.properties
@@ -15,6 +15,7 @@ server.port = 8081
 
 spring.main.allow-bean-definition-overriding=true
 
+taskana.adapter.run-as.user=peter
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.claim.referenced.tasks.in.milliseconds=10000
