--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.main.allow-bean-definition-overriding=true
 
 logging.level.pro.taskana=INFO
 
+taskana.adapter.run-as.user=peter
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=1000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=1000
 taskana.adapter.scheduler.run.interval.for.claim.referenced.tasks.in.milliseconds=1000
