--- a/taskana-adapter-camunda-wildfly-example/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-wildfly-example/src/main/resources/application.properties
@@ -12,6 +12,7 @@ logging.level.pro.taskana=INFO
 ######################################################################################
 ## Adapter properties
 ######################################################################################
+taskana.adapter.run-as.user=peter
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.claim.referenced.tasks.in.milliseconds=10000
@@ -27,7 +28,7 @@ taskana-system-connector-camunda-rest-api-user-password=pwd4Demo
 taskana-system-connector-outbox-rest-api-user-name=outboxRestUser
 taskana-system-connector-outbox-rest-api-user-password=pwd4OutboxRestUser
 ####################################################################################
-# taskana-connector propertiew
+# taskana-connector properties
 ######################################################################################
 taskana.datasource.jndi-name=java:/TaskanaDS
 ####### cache static resources properties
