--- a/taskana-adapter-camunda-wildfly-example/src/main/resources/taskana.properties
+++ b/taskana-adapter-camunda-wildfly-example/src/main/resources/taskana.properties
@@ -1,6 +1,7 @@
 taskana.roles.user = group1 | group2|teamlead-1 |teamlead-2 |user-1-1| user-1-1| user-1-2| user-2-1| user-2-2| max|elena|simone
 taskana.roles.Admin=name=konrad,Organisation=novatec|admin
 taskana.roles.businessadmin=max|Moritz|businessadmin
+taskana.roles.taskadmin=peter | taskadmin
 taskana.roles.monitor=john|teamlead_2 | monitor
 taskana.domains=DOMAIN_A,DOMAIN_B,DOMAIN_C
 taskana.classification.types=TASK,DOCUMENT
