--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
                 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                 <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-                <version.taskana>3.0.1-SNAPSHOT</version.taskana>
+                <version.taskana>3.2.0</version.taskana>
 
                 <version.maven.jar>3.2.0</version.maven.jar>
                 <version.maven-war-plugin>3.2.3</version.maven-war-plugin>
@@ -60,7 +60,6 @@
 
                 <version.assertj>3.16.1</version.assertj>
                 <version.junit.jupiter>5.6.2</version.junit.jupiter>
-                <version.junit>4.13</version.junit>
                 <version.hamcrest.json>0.2</version.hamcrest.json>
 
                 <version.maven.gpg>1.6</version.maven.gpg>
