--- a/taskana-adapter-camunda-outbox-rest/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-outbox-rest/src/main/resources/taskana-outbox.properties
@@ -2,10 +2,15 @@ taskana.adapter.outbox.schema = taskana_tables
 taskana.adapter.outbox.max.number.of.events = 57
 taskana.adapter.create_outbox_schema = true
 
-taskana.adapter.outbox.datasource.jndi=java:jboss/datasources/ProcessEnginePostgres
+#taskana.adapter.outbox.datasource.jndi=java:jboss/datasources/ProcessEnginePostgres
 #taskana.adapter.outbox.datasource.jndi=jdbc/ProcessEngine
 
 #taskana.adapter.outbox.datasource.driver=org.postgresql.Driver
 #taskana.adapter.outbox.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #taskana.adapter.outbox.datasource.username=postgres
 #taskana.adapter.outbox.datasource.password=postgres
+
+taskana.adapter.outbox.datasource.url=jdbc:h2:mem:camunda;IGNORECASE=TRUE;LOCK_MODE=0;DB_CLOSE_ON_EXIT=FALSE;
+taskana.adapter.outbox.datasource.driver=org.h2.Driver
+taskana.adapter.outbox.datasource.username=sa
+taskana.adapter.outbox.datasource.password=sa
