--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port= 10020
-server.servlet.context-path=/taskana-outbox
 spring.main.allow-bean-definition-overriding=true
 
 
@@ -34,7 +33,7 @@ taskana.adapter.scheduler.run.interval.for.check.finished.referenced.tasks.in.mi
 # Set URLs of Camunda REST API and associated Camunda task events. The format is
 # <camundaSystem1-RestURL> | <camundaSystem1-TaskEventsURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-TaskEventsURL>
 
-taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/taskana-outbox/rest/engine/default | http://localhost:${server.port}
+taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/rest/engine/default | http://localhost:${server.port}/outbox-rest
 
 taskana-system-connector-camunda-rest-api-user-name=demo
 taskana-system-connector-camunda-rest-api-user-password=demo
