--- a/taskana-adapter-camunda-spring-boot-sample/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-sample/src/main/resources/application.properties
@@ -11,36 +11,39 @@ logging.level.pro.taskana=DEBUG
 #logging.level.pro.taskana=info
 
 ## Set Server Port for Adapter
-server.port = 8081
-
+server.port = 8082
 spring.main.allow-bean-definition-overriding=true
 
-taskana.adapter.run-as.user=peter
+taskana.adapter.run-as.user=taskadmin
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.claim.referenced.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.cancel.claim.referenced.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.check.finished.referenced.tasks.in.milliseconds=10000
 
+taskana-system-connector-camunda-rest-api-user-name=demo
+taskana-system-connector-camunda-rest-api-user-password=demo
+taskana-system-connector-outbox-rest-api-user-name=outboxRestUser
+taskana-system-connector-outbox-rest-api-user-password=pwd4OutboxRestUser
 ####################################################################################
 # System connector properties
 ####################################################################################
 #
-# Set URLs of Camunda REST API and associated Camunda task events. The format is
-# <camundaSystem1-RestURL> | <camundaSystem1-TaskEventsURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-TaskEventsURL>
+# Set URLs of Camunda REST API and associated TASKANA Outbox REST API. The format is
+# <camundaSystem1-RestURL> | <camundaSystem1-OutboxRestURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-OutboxRestURL>
 
-taskana-system-connector-camundaSystemURLs=http://localhost:8080/engine-rest | http://localhost:8080
+taskana-system-connector-camundaSystemURLs=http://localhost:8081/example-context-root/rest | http://localhost:8081/example-context-root/outbox-rest
 
 ####################################################################################
 # Taskana-connector properties
 ####################################################################################
 #
 # Configue the dataource for Taskana DB (used by taskana-connector
-# taskana.datasource.jdbcUrl = jdbc:h2:tcp://localhost:8092/mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
-taskana.datasource.jdbcUrl=jdbc:h2:mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;DB_CLOSE_ON_EXIT=FALSE
+taskana.datasource.jdbcUrl = jdbc:h2:tcp://localhost:9090/mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;
 taskana.datasource.driverClassName = org.h2.Driver
 taskana.datasource.username = sa
 taskana.datasource.password = sa
+taskana.schemaName=TASKANA
 #
 # taskana.datasource.jdbcUrl=jdbc:db2://localhost:50050/taskana
 # taskana.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
@@ -51,11 +54,10 @@ taskana.datasource.password = sa
 #taskana.datasource.driverClassName=org.postgresql.Driver
 #taskana.datasource.username=postgres
 #taskana.datasource.password=postgres
-#taskana.schemaName=TASKANA
+#taskana.schemaName=taskana
 
 taskana.adapter.mapping.default.objectreference.company=DEFAULT_COMPANY
 taskana.adapter.mapping.default.objectreference.system=DEFAULT_SYSTEM
 taskana.adapter.mapping.default.objectreference.system.instance=DEFAULT_SYSTEM_INSTANCE
 taskana.adapter.mapping.default.objectreference.type=DEFAULT_TYPE
 taskana.adapter.mapping.default.objectreference.value=DEFAULT_VALUE
-
