ADPT-105: Blacklist for tasks that failed creation in TASKANA

--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
@@ -25,7 +25,7 @@ taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.millisec
 taskana.adapter.scheduler.run.interval.for.claim.referenced.tasks.in.milliseconds=1000
 taskana.adapter.scheduler.run.interval.for.cancel.claim.referenced.tasks.in.milliseconds=1000
 taskana.adapter.scheduler.run.interval.for.check.finished.referenced.tasks.in.milliseconds=1000
-
+taskana.adapter.scheduler.run.interval.for.retries.and.blocking.taskevents.in.milliseconds = 10000
 ####################################################################################
 # System connector properties
 ####################################################################################
