ADPT-106: bumped mybatis to 3.5.6 and added variable for mybatis version to listener.

--- a/taskana-adapter-camunda-listener/pom.xml
+++ b/taskana-adapter-camunda-listener/pom.xml
@@ -26,7 +26,7 @@
           <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.5.5</version>
+            <version>${version.mybatis}</version>
             <scope>provided</scope>
           </dependency>
           <dependency>
