ADPT-105: Review findings and added schema update scripts

--- a/taskana-adapter-camunda-spring-boot-test/pom.xml
+++ b/taskana-adapter-camunda-spring-boot-test/pom.xml
@@ -114,7 +114,14 @@
 						<version>${project.version}</version>
 				</dependency>
 
-				<!-- needed for test coverage -->
+                <!-- taskana-common-test classes -->
+                <dependency>
+                        <groupId>pro.taskana</groupId>
+                        <artifactId>taskana-common-test</artifactId>
+                        <version>${version.taskana}</version>
+                </dependency>
+
+                <!-- needed for test coverage -->
 				<dependency>
 						<groupId>pro.taskana</groupId>
 						<artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
