--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/taskana-outbox.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/taskana-outbox.properties
@@ -1,7 +1,7 @@
 taskana.adapter.outbox.schema = taskana_tables
 taskana.adapter.outbox.max.number.of.events = 57
 taskana.adapter.create_outbox_schema = true
-taskana.adapter.outbox.max.number.of.task.creation.retries = 3
+taskana.adapter.outbox.initial.number.of.task.creation.retries = 3
 taskana.adapter.outbox.duration.between.task.creation.retries = PT1S
 
 
