ADPT-110: removed serialVersionUID class variable from all entitites

--- a/pom.xml
+++ b/pom.xml
@@ -277,7 +277,7 @@
                                         <showWarnings>true</showWarnings>
                                         <failOnWarning>true</failOnWarning>
                                         <compilerArgs>
-                                                <arg>-Xlint:all</arg>
+                                                <arg>-Xlint:-serial</arg>
                                                 <arg>-proc:none</arg>
                                         </compilerArgs>
                                 </configuration>
