--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
         <url>http://taskana.pro</url>
 
         <properties>
-                <java.version>1.8</java.version>
-                <maven.compiler.source>1.8</maven.compiler.source>
-                <maven.compiler.target>1.8</maven.compiler.target>
+                <java.version>11</java.version>
+                <maven.compiler.release>8</maven.compiler.release>
+                <maven.compiler.testRelease>${java.version}</maven.compiler.testRelease>
                 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                 <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -194,39 +194,6 @@
                                         <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                                 </repository>
                         </distributionManagement>
-                </profile>
-                <profile>
-                        <id>eclipse</id>
-                        <build>
-                                <pluginManagement>
-                                        <plugins>
-                                                <plugin>
-                                                        <groupId>org.eclipse.m2e</groupId>
-                                                        <artifactId>lifecycle-mapping</artifactId>
-                                                        <version>1.0.0</version>
-                                                        <configuration>
-                                                                <lifecycleMappingMetadata>
-                                                                        <pluginExecutions>
-                                                                                <pluginExecution>
-                                                                                        <pluginExecutionFilter>
-                                                                                                <groupId>org.apache.maven.plugins</groupId>
-                                                                                                <artifactId>maven-checkstyle-plugin</artifactId>
-                                                                                                <versionRange>[1.0.0,)</versionRange>
-                                                                                                <goals>
-                                                                                                        <goal>check</goal>
-                                                                                                </goals>
-                                                                                        </pluginExecutionFilter>
-                                                                                        <action>
-                                                                                                <ignore/>
-                                                                                        </action>
-                                                                                </pluginExecution>
-                                                                        </pluginExecutions>
-                                                                </lifecycleMappingMetadata>
-                                                        </configuration>
-                                                </plugin>
-                                        </plugins>
-                                </pluginManagement>
-                        </build>
                 </profile>
                 <profile>
                         <id>coverage</id>
