--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
       name: release / deploy / commit
       before_install: |
         openssl aes-256-cbc -K "$encrypted_9f2846d5d05c_key" -iv "$encrypted_9f2846d5d05c_iv" \
-        -in "ci/codesigning.asc.enc" -out "ci/codesigning.asc" -d && gpg --import "ci/codesigning.asc"
+        -in "ci/codesigning.asc.enc" -out "ci/codesigning.asc" -d && gpg --batch --import "ci/codesigning.asc"
       install: ci/change_version.sh -m .
       script: |
         mvn deploy -B -T 2C -P `[[ "$TRAVIS_TAG" =~ ^[0-9]+\.[0-9]+\.[0-9]+/[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo "release" || echo "snapshot"` \
