--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 
                 <version.spring>5.0.5.RELEASE</version.spring>
                 <version.spring.core>2.0.0.RELEASE</version.spring.core>
-                <version.spring.boot>2.3.4.RELEASE</version.spring.boot>
+                <version.spring.boot>2.3.5.RELEASE</version.spring.boot>
 
                 <version.camunda>7.11.0</version.camunda>
                 <version.camunda.bpm.spring.boot>3.3.10</version.camunda.bpm.spring.boot>
@@ -117,6 +117,18 @@
                         <snapshots><enabled>true</enabled></snapshots>
                 </repository>
         </repositories>
+
+        <dependencyManagement>
+                <dependencies>
+                        <dependency>
+                                <groupId>org.springframework.boot</groupId>
+                                <artifactId>spring-boot-dependencies</artifactId>
+                                <version>${version.spring.boot}</version>
+                                <type>pom</type>
+                                <scope>import</scope>
+                        </dependency>
+                </dependencies>
+        </dependencyManagement>
 
         <profiles>
                 <profile>
