--- a/.travis.yml
+++ b/.travis.yml
@@ -38,9 +38,16 @@ jobs:
 
     - stage: Release / Deploy
       name: release / deploy / commit
+      # This is necessary in order to fix some gpg issues (for signing the artifacts which will be released)
+      # More details: https://discuss.circleci.com/t/error-sending-to-agent-inappropriate-ioctl-for-device/17465/7
       before_install: |
-        openssl aes-256-cbc -K "$encrypted_9f2846d5d05c_key" -iv "$encrypted_9f2846d5d05c_iv" \
-        -in "ci/codesigning.asc.enc" -out "ci/codesigning.asc" -d && gpg --batch --import "ci/codesigning.asc"
+        echo use-agent >> ~/.gnupg/gpg.conf \
+        && echo pinentry-mode loopback >> ~/.gnupg/gpg.conf \
+        && echo allow-loopback-pinentry >> ~/.gnupg/gpg-agent.conf \
+        && echo RELOADAGENT | gpg-connect-agent \
+        && openssl aes-256-cbc -K "$encrypted_9f2846d5d05c_key" -iv "$encrypted_9f2846d5d05c_iv" \
+        -in "ci/codesigning.asc.enc" -out "ci/codesigning.asc" -d \
+        && gpg --batch --no-tty --yes --import "ci/codesigning.asc"
       install: ci/change_version.sh -m .
       script: |
         mvn deploy -B -T 2C -P `[[ "$TRAVIS_TAG" =~ ^[0-9]+\.[0-9]+\.[0-9]+/[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo "release" || echo "snapshot"` \
