--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
         && gpg --batch --no-tty --yes --import "ci/codesigning.asc"
       install: ci/change_version.sh -m .
       script: |
-        mvn deploy -B -T 2C -P `[[ "$TRAVIS_TAG" =~ ^[0-9]+\.[0-9]+\.[0-9]+/[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo "release" || echo "snapshot"` \
+        ./mvnw deploy -B -T 2C -P `[[ "$TRAVIS_TAG" =~ ^[0-9]+\.[0-9]+\.[0-9]+/[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo "release" || echo "snapshot"` \
         --settings ci/mvnsettings.xml -DskipTests -Dcheckstyle.skip \
         -pl !:taskana-adapter-camunda-listener-example,!:taskana-adapter-camunda-spring-boot-test
       before_cache: rm -rf $HOME/.m2/repository/pro/taskana
