Fix typos in comment

--- a/taskana-adapter-camunda-spring-boot-sample/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-sample/src/main/resources/application.properties
@@ -38,7 +38,7 @@ taskana-system-connector-camundaSystemURLs=http://localhost:8081/example-context
 # Taskana-connector properties
 ####################################################################################
 #
-# Configue the dataource for Taskana DB (used by taskana-connector
+# Configure the datasource for Taskana DB (used by taskana-connector)
 taskana.datasource.jdbcUrl = jdbc:h2:tcp://localhost:9090/mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;
 taskana.datasource.driverClassName = org.h2.Driver
 taskana.datasource.username = sa
