ADPT-119: Bump Spring Boot Version to 2.4.0

--- a/taskana-adapter-camunda-spring-boot-test/pom.xml
+++ b/taskana-adapter-camunda-spring-boot-test/pom.xml
@@ -166,6 +166,12 @@
                         <version>${version.assertj}</version>
                         <scope>test</scope>
                 </dependency>
+                <dependency>
+                        <groupId>org.junit.vintage</groupId>
+                        <artifactId>junit-vintage-engine</artifactId>
+                        <version>${version.junit.jupiter}</version>
+                        <scope>test</scope>
+                </dependency>
         </dependencies>
 
         <build>
