--- a/taskana-adapter-camunda-system-connector/pom.xml
+++ b/taskana-adapter-camunda-system-connector/pom.xml
@@ -48,6 +48,12 @@
                         <version>${version.spring.boot}</version>
                 </dependency>
 
+                <dependency>
+                  <groupId>org.junit.vintage</groupId>
+                  <artifactId>junit-vintage-engine</artifactId>
+                  <version>${version.junit.jupiter}</version>
+                  <scope>test</scope>
+                </dependency>
 
         </dependencies>
 
